cursive-bootstrap/tests/ui/E-TYP/E-TYP-2403.cursive
// RUN: compile-fail
// DIAG: E-TYP-2403
// SPEC: 5.3
// DESC: Implementing modal missing required state

class Resource {
    @Open { }
    @Closed { }
}

modal Handle <: Resource {  //~ ERROR E-TYP-2403
    @Active { }
}



public procedure main(move ctx: Context) -> i32 {
    return 0
}

